--- a/Qian.CourseManger/View/MainWindow.xaml
+++ b/Qian.CourseManger/View/MainWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="WpfNet.MainWindow"
+﻿<Window x:Class="Qian.CourseManger.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfNet"
+        xmlns:local="clr-namespace:Qian.CourseManger"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+
     </Grid>
 </Window>
