--- a/WpfApp2/App.xaml
+++ b/WpfApp2/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="WpfNet.App"
+﻿<Application x:Class="WpfApp2.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfNet"
+             xmlns:local="clr-namespace:WpfApp2"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
