--- a/CaculateApp/MainWindow.xaml
+++ b/CaculateApp/MainWindow.xaml
@@ -35,14 +35,22 @@
             VerticalAlignment="Top"
             Content=""
             FontSize="20" />
-
-
-        <Grid Margin="10,90,594,164">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
+            </Grid.RowDefinitions>
+        </Grid>
 
+        <Grid Margin="10,90,594,10" hc:BorderElement.Circular="True">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50" />
+                <RowDefinition Height="50" />
+                <RowDefinition Height="50" />
+                <RowDefinition Height="50" />
+                <RowDefinition Height="50" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
@@ -86,10 +94,122 @@
                 VerticalAlignment="Center"
                 Content="4"
                 Style="{StaticResource ButtonPrimary}" />
+
+            <Button
+                Grid.Row="1"
+                Grid.Column="0"
+                Width="32"
+                Height="32"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Content="5"
+                Style="{StaticResource ButtonPrimary}" />
+            <Button
+                Grid.Row="1"
+                Grid.Column="1"
+                Width="32"
+                Height="32"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Content="6"
+                Style="{StaticResource ButtonPrimary}" />
+            <Button
+                Grid.Row="1"
+                Grid.Column="2"
+                Width="32"
+                Height="32"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Content="7"
+                Style="{StaticResource ButtonPrimary}" />
+            <Button
+                Grid.Row="1"
+                Grid.Column="3"
+                Width="32"
+                Height="32"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Content="8"
+                Style="{StaticResource ButtonPrimary}" />
+
+            <Button
+                Grid.Row="2"
+                Grid.Column="0"
+                Width="32"
+                Height="32"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Content="9"
+                Style="{StaticResource ButtonPrimary}" />
+            <Button
+                Grid.Row="2"
+                Grid.Column="1"
+                Width="32"
+                Height="32"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Content="0"
+                Style="{StaticResource ButtonPrimary}" />
+            <Button
+                Grid.Row="2"
+                Grid.Column="2"
+                Width="32"
+                Height="32"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Content="."
+                Style="{StaticResource ButtonPrimary}" />
+            <Button
+                Grid.Row="2"
+                Grid.Column="3"
+                Width="32"
+                Height="32"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Content="-"
+                Style="{StaticResource ButtonPrimary}" />
+            <Button
+                Grid.Row="3"
+                Grid.ColumnSpan="4"
+                Width="180"
+                Height="32"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Content="ANS"
+                Style="{StaticResource ButtonPrimary}" />
+
+            <Button
+                Grid.Row="4"
+                Grid.Column="0"
+                Grid.ColumnSpan="2"
+                Width="50"
+                Height="32"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Content="="
+                Style="{StaticResource ButtonPrimary}" />
+
+            <Button
+                Grid.Row="4"
+                Grid.Column="1"
+                Grid.ColumnSpan="4"
+                Width="50"
+                Height="32"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Content="AC"
+                Style="{StaticResource ButtonPrimary}" />
         </Grid>
 
 
-
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition />
+            </Grid.RowDefinitions>
+        </Grid>
 
 
     </Grid>
