--- a/WpfApp1/CloseWindow.xaml
+++ b/WpfApp1/CloseWindow.xaml
@@ -1,19 +1,24 @@
-﻿<Window x:Name="window" x:Class="WpfApp1.CloseWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp1"
-        WindowState="Normal"
-      ShowInTaskbar="False"
-        ResizeMode="CanResizeWithGrip"
-        
-        mc:Ignorable="d"
-        Title="CloseWindow" Height="450" Width="800" Topmost="True" WindowStartupLocation="CenterScreen"  >
+﻿<Window
+    x:Class="WpfApp1.CloseWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:WpfApp1"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    x:Name="window"
+    Title="CloseWindow"
+    Width="800"
+    Height="450"
+    ResizeMode="CanResizeWithGrip"
+    ShowInTaskbar="False"
+    Topmost="True"
+    WindowStartupLocation="CenterScreen"
+    WindowState="Normal"
+    mc:Ignorable="d">
     <Grid Margin="20">
 
         <Grid.Resources>
-            <!-- Default settings for controls -->
+            <!--  Default settings for controls  -->
             <Style TargetType="{x:Type Label}">
                 <Setter Property="Margin" Value="0,3,5,5" />
                 <Setter Property="Padding" Value="0,0,0,5" />
@@ -41,19 +46,47 @@
             <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <!-- Left,Top,Right,Bottom margins-->
-        <Label Grid.Column="0" Grid.Row="0">Left Margin:</Label>
-        <TextBox Name="leftMarginTextBox" Grid.Column="1" Grid.Row="0" />
+        <!--  Left,Top,Right,Bottom margins  -->
+        <Label Grid.Row="0" Grid.Column="0">Left Margin:</Label>
+        <TextBox
+            Name="leftMarginTextBox"
+            Grid.Row="0"
+            Grid.Column="1" />
 
-        <Label Grid.Column="0" Grid.Row="1">Top Margin:</Label>
-        <TextBox Name="topMarginTextBox" Grid.Column="1" Grid.Row="1"/>
+        <Label Grid.Row="1" Grid.Column="0">Top Margin:</Label>
+        <TextBox
+            Name="topMarginTextBox"
+            Grid.Row="1"
+            Grid.Column="1" />
 
-        <Label Grid.Column="0" Grid.Row="2">Right Margin:</Label>
-        <TextBox Name="rightMarginTextBox" Grid.Column="1" Grid.Row="2" />
+        <Label Grid.Row="2" Grid.Column="0">Right Margin:</Label>
+        <TextBox
+            Name="rightMarginTextBox"
+            Grid.Row="2"
+            Grid.Column="1" />
 
-        <Label Grid.Column="0" Grid.Row="3">Bottom Margin:</Label>
-        <TextBox Name="bottomMarginTextBox" Grid.Column="1" Grid.Row="3" />
-        <Button Height="20" Width="100  " Grid.Row="5"   Grid.ColumnSpan="2" Click="Button_Click_1">点击</Button>
-        <Button Grid.Column="1" Content="Button" HorizontalAlignment="Left" Height="61" Margin="85,162,0,0" Grid.Row="5" VerticalAlignment="Top" Width="82" Click="Button_Click"/>
+        <Label Grid.Row="3" Grid.Column="0">Bottom Margin:</Label>
+        <TextBox
+            Name="bottomMarginTextBox"
+            Grid.Row="3"
+            Grid.Column="1" />
+        <Button
+            Grid.Row="5"
+            Grid.ColumnSpan="2"
+            Width="100  "
+            Height="20"
+            Click="Button_Click_1">
+            点击
+        </Button>
+        <Button
+            Grid.Row="5"
+            Grid.Column="1"
+            Width="82"
+            Height="61"
+            Margin="85,162,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Click="Button_Click"
+            Content="Button" />
     </Grid>
 </Window>
