--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -28,6 +28,7 @@
                 x:Name="newWindow"
                 Width="100"
                 Height="40"
+                Click="newWindow_Click"
                 Content="newWindow" />
         </StackPanel>
 
