--- a/WpfApp1/NewWindow.xaml
+++ b/WpfApp1/NewWindow.xaml
@@ -1,13 +1,19 @@
 ﻿<Window
-    x:Class="WpfSnippet.MainWindow"
+    x:Class="WpfApp1.NewWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:WpfSnippet"
+    xmlns:local="clr-namespace:WpfApp1"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="MainWindow"
+    Title="NewWindow"
     Width="800"
     Height="450"
     mc:Ignorable="d">
-    <Grid />
+    <StackPanel Margin="10">
+        <TextBox Name="txtValue" />
+        <WrapPanel Margin="0,10">
+            <TextBlock FontWeight="Bold" Text="Value: " />
+            <TextBlock x:Name="lblValue" />
+        </WrapPanel>
+    </StackPanel>
 </Window>
