--- a/WpfApp2/View/MainWindow.xaml
+++ b/WpfApp2/View/MainWindow.xaml
@@ -98,35 +98,14 @@
                 Width="122"
                 Height="51"
                 Click="Button_Click"
-                Content="Button" />
+                Content="打开网址" />
+            <Button
+                x:Name="WebviewBtn"
+                Width="122"
+                Height="51"
+                Click="WebviewBtn_Click"
+                Content="webview2" />
 
-            <TabControl>
-                <TabItem
-                    Width="110"
-                    Height="30"
-                    Background="Green"
-                    Foreground="#888888"
-                    Header="歌手">
-                    <Button Content="hhh1" />
-
-                </TabItem>
-                <TabItem
-                    Width="110"
-                    Height="30"
-                    Foreground="#888888"
-                    Header="歌手">
-                    <Button Content="hhh2" />
-
-                </TabItem>
-                <TabItem
-                    Width="110"
-                    Height="30"
-                    Foreground="#888888"
-                    Header="歌手">
-                    <Button Content="hhh3" />
-
-                </TabItem>
-            </TabControl>
         </StackPanel>
 
     </Grid>
