--- a/WpfApp2/View/TextBoxPage.xaml
+++ b/WpfApp2/View/TextBoxPage.xaml
@@ -1,13 +1,15 @@
 ﻿<Window
-    x:Class="WpfSnippet.MainWindow"
+    x:Class="WpfApp2.View.TextBoxPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:WpfSnippet"
+    xmlns:local="clr-namespace:WpfApp2.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="MainWindow"
+    Title="TextBoxPage"
     Width="800"
     Height="450"
     mc:Ignorable="d">
-    <Grid />
+    <StackPanel Margin="10">
+        <TextBox />
+    </StackPanel>
 </Window>
