--- a/WpfApp2/Startup.xaml
+++ b/WpfApp2/Startup.xaml
@@ -6,7 +6,7 @@
     xmlns:local="clr-namespace:WpfApp2"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Startup"
-    Width="800"
+    Width="1280"
     Height="600"
     mc:Ignorable="d">
     <Grid>
@@ -57,5 +57,14 @@
             Height="36"
             Click="TextBoxPage_Click"
             Content="TextBoxPage" />
+
+        <Button
+            x:Name="StylePage"
+            Grid.Row="0"
+            Grid.Column="4"
+            Width="80"
+            Height="36"
+            Click="StylePage_Click"
+            Content="StylePage" />
     </Grid>
 </Window>
