--- a/WpfApp1/View/ChartPage.xaml
+++ b/WpfApp1/View/ChartPage.xaml
@@ -6,8 +6,14 @@
     Width="1280"
     Height="720">
 
-    <Grid>
+    <StackPanel>
+        <Button
+            Width="80"
+            Height="36"
+            Click="Button_Click"
+            Content="增加" />
         <uc:ChartControl Visibility="Hidden" />
-        <uc:LineControl />
-    </Grid>
+        <uc:LineControl Visibility="Hidden" />
+        <uc:CustomControl />
+    </StackPanel>
 </Window>
