--- a/Vmmaker/MainWindow.xaml
+++ b/Vmmaker/MainWindow.xaml
@@ -14,9 +14,23 @@
         <local:MainModel />
     </Window.DataContext>
     <StackPanel Margin="20">
+        <WrapPanel>
+            <Button
+                Command="{Binding setDefaultCommand}"
+                Content="一键设置"
+                Style="{StaticResource ButtonDashedPrimary}" />
+            <Button
+                Margin="10,0"
+                Command="{Binding clearCommand}"
+                Content="一键清除"
+                Style="{StaticResource ButtonDanger}" />
+        </WrapPanel>
         <WrapPanel Margin="10">
             <Label Content="请输入与配置文件路径" />
-            <TextBox Width="300" Text="{Binding ConfigPath}" />
+            <TextBox
+                Width="300"
+                Margin="10,0"
+                Text="{Binding ConfigPath}" />
             <Button
                 x:Name="selectConfPath"
                 Command="{Binding setConfCommand}"
@@ -29,6 +43,7 @@
             <TextBox Width="300" Text="{Binding vmPath}" />
             <Button
                 x:Name="selectPath"
+                Margin="10,0"
                 Command="{Binding setVmCommand}"
                 Content="选择路径" />
             <Button
@@ -37,10 +52,24 @@
                 Content="生成"
                 Style="{StaticResource ButtonPrimary}" />
         </WrapPanel>
+        <WrapPanel Margin="10">
+            <hc:TextBox Width="200" Text="https://jetbra.in" />
+            <Button
+                Margin="10,0"
+                Command="{Binding copyProxy}"
+                Content="复制代理"
+                Style="{StaticResource ButtonSuccess}" />
+            <Button
+                Margin="10,0"
+                Command="{Binding openWebCommand}"
+                Content="打开jetbra"
+                Style="{StaticResource ButtonPrimary}" />
+        </WrapPanel>
         <WrapPanel>
             <TextBox Text="{Binding CopyText}" />
             <Button
                 x:Name="copyCmd"
+                Margin="10,0"
                 Command="{Binding copyCommand}"
                 Content="复制"
                 Style="{StaticResource ButtonPrimary}" />
